  * repair: Handle case where index file is corrupt, but all objects are ok.
  * assistant: Notice on startup when the index file is corrupt, and
    auto-repair.
  * Fix direct mode merge bug when a direct mode file was deleted and replaced
    with a directory. An ordering problem caused the directory to not get
    created in this case.
    Thanks to Tim for the test cases.

 -- Joey Hess <joeyh@debian.org>  Wed, 06 Nov 2013 16:14:14 -0400

git-annex (4.20131106) unstable; urgency=low

  * Improve local pairing behavior when two computers both try to start
    the pairing process separately.
  * sync: Work even when the local git repository is new and empty,
    with no master branch.
  * gcrypt, bup: Fix bug that prevented using these special remotes
    with encryption=pubkey.
  * Fix enabling of gcrypt repository accessed over ssh;
    git-annex-shell gcryptsetup had a bug that caused it to fail
    with permission denied.
  * Fix zombie process that occurred when switching between repository
    views in the webapp.
  * map: Work when there are gcrypt remotes.
  * Fix build w/o webapp.
  * Fix exception handling bug that could cause .git/annex/index to be used
    for git commits outside the git-annex branch. Known to affect git-annex
    when used with the git shipped with Ubuntu 13.10.

 -- Joey Hess <joeyh@debian.org>  Wed, 06 Nov 2013 11:17:47 -0400

git-annex (4.20131101) unstable; urgency=low

  * The "git annex content" command is renamed to "git annex wanted".
  * New --want-get and --want-drop options which can be used to
    test preferred content settings.
    For example, "git annex find --in . --want-drop"
  * assistant: When autostarted, wait 5 seconds before running the startup
    scan, to avoid contending with the user's desktop login process.
  * webapp: When setting up a bare shared repository, enable non-fast-forward
    pushes.
  * sync: Show a hint about receive.denyNonFastForwards when a push fails.