@@ -31,6 +31,10 @@ git-annex (5.20131102) UNRELEASED; urgency=low
     with a directory. An ordering problem caused the directory to not get
     created in this case.
     Thanks to Tim for the test cases.
+  * Direct mode .git/annex/objects directories are no longer left writable,
+    because that allowed writing to symlinks of files that are not present,
+    which followed the link and put bad content in an object location.
+  * fsck: Fix up .git/annex/object directory permissions.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 06 Nov 2013 16:14:14 -0400
 
